--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <label for="name">Google/Facebook/Twitter Account</label>
+        <input type="text" id="name" name="Account" required>
 
         <label for="message">Message:</label>
         <textarea id="message" name="message" rows="4" required></textarea>
