--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <title>Clothing Store</title>
 </head>
 <body>
@@ -14,9 +15,10 @@
         <h1>Clothing Store</h1>
        
         <div>
-            <a class="active" href="index.html">Home</a>
+            <a class="active" href="login.html">login</a>
+            <a class="active" href="index.html"><i class="bi bi-cart2"></i>ShoppingCart</i></a>
             <a class="active" href="review.html">Reviews</a> 
-            <a class="active" href="contact.html">Contact</a>
+            <a class="active" href="contact.html">Contact Us</a>
   
               
           </div><br>
